# Trading-Dashboard-Codex

./: .gitignore  AGENTS.md  PROJECT_BRIEF.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
docs/: breadth_composite_research.md  claude_transition_protocol.md  parallel_project_review.md  pullback_scanner_rules.md  session_handoff.md  swing_lab_breadth_composite_handoff.md  swing_lab_reuse_note.md
inputs/universe/: sp1500_universe_filtered.csv
src/trading_dashboard/: __init__.py  cli.py  config.py
src/trading_dashboard/compute/: __init__.py  indicators.py  metrics.py
src/trading_dashboard/data/: fetch.py  storage.py  universe.py
src/trading_dashboard/render/: __init__.py  html.py
src/trading_dashboard/scanners/: __init__.py  pullback.py
tests/: test_data_quality.py  test_fetch_replaces_sources.py  test_indicators.py  test_integration_mock_update.py  test_pullback.py  test_storage.py  test_universe.py
